# ravel

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  README_ja.md  lefthook.yml  mise.toml
.agents/rules/: documentation.md  gpui.md  rust.md
.agents/skills/gpui-ce/: SKILL.md
.agents/skills/ravel-review/: SKILL.md
.agents/skills/ui-design-impl/: SKILL.md
.claude/: settings.json
.claude/rules/: commit-message.md
.claude/skills/: gpui-ce  gpui-component  ravel-review  ui-design-impl
.github/workflows/: ci.yml
.takt/: .gitignore  config.yaml  tasks.yaml
.takt/facets/personas/: doc-updater.md  implementer.md  reviewer.md
.takt/facets/policies/: ravel-coding.md
.takt/tasks/20260622-150000-t001ms/: order.md
.takt/tasks/20260622-150000-t002ms/: order.md
.takt/tasks/20260622-150000-t003ms/: order.md
.takt/tasks/20260622-150000-t004ms/: order.md
.takt/tasks/20260622-150000-t005ms/: order.md
.takt/tasks/20260622-150000-t006ms/: order.md
.takt/tasks/20260622-150000-t007ms/: order.md
.takt/tasks/20260622-150000-t008ms/: order.md
.takt/tasks/20260624-150000-t006a/: order.md
.takt/tasks/20260624-150000-t006b/: order.md
.takt/tasks/20260625-150000-t009ms/: order.md
.takt/tasks/20260625-150000-t011ms/: order.md
.takt/workflows/: ravel.yaml
assets/keybindings/: default.toml
assets/layer-templates/: null.ron  shape.ron  solid.ron  video.ron
assets/locales/: en.toml  ja.toml
assets/themes/: ravel.json
assets/workspaces/: color.toml  edit.toml  motion.toml  node.toml
crates/ravel-app/: Cargo.toml
crates/ravel-app/src/: assets.rs  eval_hooks.rs  lib.rs  main.rs  panels.rs  playback.rs  project_state.rs  title_bar.rs  trace.rs  workspace.rs
crates/ravel-app/src/node_editor/: adapter.rs  bezier.rs  mod.rs  node_renderer.rs  painting.rs  port_colors.rs  viewport.rs
crates/ravel-app/src/panels/: mod.rs  node_editor.rs  param_edit.rs  properties.rs  timeline.rs  viewer.rs
crates/ravel-app/src/panels/viewer/: viewport.rs
crates/ravel-app/src/project/: asset.rs  container.rs  graph_doc.rs  manifest.rs  migration.rs  mod.rs  paths.rs  settings.rs  timestamp.rs
crates/ravel-app/src/widgets/: curve_editor.rs  mod.rs  scrub_input.rs
crates/ravel-app/tests/: command_action_table.rs  command_dispatch_repro.rs  fuzz_parser.rs  panel_toggle_preset.rs  playback_transport.rs
crates/ravel-audio/: Cargo.toml
crates/ravel-audio/src/: device.rs  effects.rs  engine.rs  error.rs  lib.rs  mixer.rs  resampler.rs  sync.rs  waveform.rs
crates/ravel-core/: Cargo.toml
crates/ravel-core/benches/: eval_bench.rs
crates/ravel-core/src/: eval.rs  graph.rs  id.rs  lib.rs  logging.rs  media.rs  network.rs  registry.rs  types.rs
crates/ravel-core/src/animation/: blend.rs  channel.rs  curve.rs  interpolation.rs  mod.rs
crates/ravel-core/src/composition/: compile.rs  mod.rs  templates.rs  validate.rs
crates/ravel-core/src/geometry/: attribute.rs  container.rs  field.rs  mod.rs  names.rs  ops.rs
crates/ravel-core/src/registry/: builtin.rs  mod.rs
crates/ravel-core/src/runtime/: channels.rs  decode_pool.rs  eval_pool.rs  eval_service.rs  io_runtime.rs  mod.rs  playback.rs
crates/ravel-core/src/timeline/: id.rs  mod.rs  sequence.rs  timeline.rs  track.rs
crates/ravel-core/src/types/: mod.rs
crates/ravel-core/src/undo/: journal.rs  mod.rs  mutation.rs  recovery.rs  stack.rs
crates/ravel-gpu/: Cargo.toml
crates/ravel-gpu/src/: compute.rs  device.rs  error.rs  frame.rs  lib.rs  raster.rs  shader.rs  texture_pool.rs  transfer.rs
crates/ravel-gpu/src/shaders/: invert.wgsl
crates/ravel-gpu/tests/: compute_invert.rs
crates/ravel-i18n/: Cargo.toml
crates/ravel-i18n/src/: lib.rs
crates/ravel-media/: Cargo.toml
crates/ravel-media/benches/: decode_bench.rs
crates/ravel-media/src/: decoder.rs  encoder.rs  error.rs  format.rs  image_seq.rs  lib.rs
crates/ravel-media/src/hwaccel/: device.rs  mod.rs  transfer.rs
crates/ravel-media/tests/: integration_ffmpeg.rs
crates/ravel-nodes/: Cargo.toml
crates/ravel-nodes/examples/: perf_baseline.rs
crates/ravel-nodes/src/: blur.rs  color_correct.rs  constant.rs  geometry.rs  gpu_util.rs  layer_ref.rs  lib.rs  math.rs  merge.rs  net.rs  subnet.rs  transform.rs  video.rs
crates/ravel-nodes/src/attribute/: mod.rs
crates/ravel-nodes/src/comp/: merge.rs  mod.rs  opacity.rs  source.rs  time_offset.rs  transform.rs
crates/ravel-nodes/src/field/: mod.rs
crates/ravel-nodes/src/rasterize/: mod.rs
crates/ravel-nodes/src/scatter/: mod.rs
crates/ravel-nodes/src/shaders/: blur.wgsl  color_correct.wgsl  merge.wgsl  rasterize.wgsl  transform.wgsl
crates/ravel-nodes/src/shape/: mod.rs
crates/ravel-nodes/tests/: gpu_resident_pipeline.rs  layer_network.rs  shape_layer_golden.rs
crates/ravel-ui/: Cargo.toml
crates/ravel-ui/src/: command.rs  document.rs  keyframes.rs  lib.rs  menu.rs  panel.rs  preset.rs  shell.rs  window.rs
crates/ravel-ui/src/keybindings/: mod.rs  parser.rs
crates/ravel-ui/src/panels/: mod.rs  properties.rs  timeline.rs
crates/ravel-ui/src/properties/: layer.rs  mod.rs  node.rs
docs/: agent-api-reference.md  gpui-ui-guide.md  ui-impl-status.md
docs/implementation/: curve-editor-plan.md  eval-render-performance-plan.md  geometry-pipeline-ui-plan.md  gpui-command-focus-refactor-plan.md  layer-network-model-plan.md  node-expansion-plan.md  param-input-ports-plan.md  param-range-scrub-input-plan.md  perf-baseline.md  plan.md  playback-foundation-plan.md  smoke-test-fixes-plan.md  task-016-plan.md  task-017-plan.md  task-019-plan.md  tool-system-plan.md  viewer-comp-coordinate-scale-plan.md
docs/implementation/tasks/: TASK-001.md  TASK-002.md  TASK-003.md  (+49 more)
docs/requirements/: REQ-CODE.md  REQ-CORE.md  REQ-DATA.md  REQ-GPU.md  REQ-INFRA.md  REQ-LAYER.md  REQ-MEDIA.md  REQ-MOGRAPH.md  REQ-PLUGIN.md  REQ-PROJ.md  REQ-RENDER.md  REQ-UI.md  overview.md
docs/specifications/: architecture.md  data-model.md  procedural-geometry.md  ui-spec.md
scripts/: lint-patterns.allow  lint-patterns.sh  review-gate.sh
scripts/hooks/: post-edit-lint.sh  pre-pr-review-gate.sh
(+17 files in other folders)
