[workspace]
resolver = "2"
members = [
    "crates/ravel-core",
    "crates/ravel-gpu",
    "crates/ravel-media",
    "crates/ravel-ui",
    "crates/ravel-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/NaruseNia/ravel"

[workspace.dependencies]
ravel-core = { path = "crates/ravel-core" }
ravel-gpu = { path = "crates/ravel-gpu" }
ravel-media = { path = "crates/ravel-media" }
ravel-ui = { path = "crates/ravel-ui" }
ravel-app = { path = "crates/ravel-app" }

# Shared dependencies
thiserror = "2"
anyhow = "1"
im = "15"
serde = { version = "1", features = ["derive"] }
wgpu = "29"
naga = { version = "29", features = ["wgsl-in"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
sha2 = "0.10"
notify = "8"
toml = "0.8"
serde_json = "1"
ron = "0.12"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
dirs = "6"
rayon = "1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
bincode = "1"
gpui = { git = "https://github.com/gpui-ce/gpui-ce" }
gpui_platform = { git = "https://github.com/gpui-ce/gpui-ce", features = ["font-kit"] }
gpui-component = { git = "https://github.com/narusenia/gpui-component", branch = "gpui-ce-compat" }
# NOTE: gpui requires full Xcode (not just CLI tools) for Metal shader compilation
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[patch.crates-io]
gpui = { git = "https://github.com/gpui-ce/gpui-ce" }

[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/gpui-ce/gpui-ce" }
