[workspace]
resolver = "2"
members = [
    "crates/ravel-core",
    "crates/ravel-gpu",
    "crates/ravel-nodes",
    "crates/ravel-media",
    "crates/ravel-audio",
    "crates/ravel-i18n",
    "crates/ravel-ui",
    "crates/ravel-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/NaruseNia/ravel"

[workspace.dependencies]
ravel-core = { path = "crates/ravel-core" }
ravel-gpu = { path = "crates/ravel-gpu" }
ravel-media = { path = "crates/ravel-media" }
ravel-i18n = { path = "crates/ravel-i18n" }
ravel-ui = { path = "crates/ravel-ui" }
ravel-audio = { path = "crates/ravel-audio" }
ravel-nodes = { path = "crates/ravel-nodes" }
ravel-app = { path = "crates/ravel-app" }

# UI framework (gpui-ce community edition)
gpui = { git = "https://github.com/gpui-ce/gpui-ce", rev = "ce08af96db6c3474ab3b388325cdd1a7c3de06d9" }
gpui_platform = { git = "https://github.com/gpui-ce/gpui-ce", rev = "ce08af96db6c3474ab3b388325cdd1a7c3de06d9", features = ["font-kit"] }
gpui-component = { git = "https://github.com/narusenia/gpui-component", branch = "gpui-ce-compat" }
gpui-component-assets = { git = "https://github.com/narusenia/gpui-component", branch = "gpui-ce-compat" }
rust-embed = "8"

# GPU
wgpu = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88" }
naga = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88", features = ["wgsl-in"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# Audio
cpal = "0.15"
dasp_sample = "0.11"
rubato = "0.14"

# Shared dependencies
thiserror = "2"
anyhow = "1"
im = { version = "15", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
smol_str = "0.3"
zeno = "0.3"
log = "0.4"
sha2 = "0.10"
notify = "8"
toml = "0.8"
serde_json = "1"
ron = "0.12"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
dirs = "6"
rayon = "1"
crossbeam-channel = "0.5"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
bincode = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
ffmpeg-the-third = "5"

[patch.crates-io]
gpui = { git = "https://github.com/gpui-ce/gpui-ce", rev = "ce08af96db6c3474ab3b388325cdd1a7c3de06d9" }

[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/gpui-ce/gpui-ce", rev = "ce08af96db6c3474ab3b388325cdd1a7c3de06d9" }
