[package]
name = "ravel-app"
description = "Application entry point, configuration, and i18n for Ravel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "ravel"

[[bin]]
name = "ravel"
path = "src/main.rs"

[dependencies]
ravel-core = { workspace = true }
ravel-i18n = { workspace = true }
ravel-ui = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ron = { workspace = true }
zip = { workspace = true }
dirs = { workspace = true }
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
tracing = { workspace = true }
