[package]
name = "ravel-app"
description = "Application entry point, configuration, and i18n for Ravel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "ravel"

[[bin]]
name = "ravel"
path = "src/main.rs"

[dependencies]
gpui-component-assets = { workspace = true }
rust-embed = { workspace = true }
ravel-core = { workspace = true }
ravel-gpu = { workspace = true }
ravel-i18n = { workspace = true }
ravel-nodes = { workspace = true }
ravel-ui = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ron = { workspace = true }
zip = { workspace = true }
dirs = { workspace = true }
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
