# Copyright The Ravel Authors.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "ravel-core"
description = "Ravel core engine: node-graph DAG, type system, evaluation."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
im.workspace = true
thiserror.workspace = true
