[package]
name = "ravel-core"
description = "Core DAG evaluation engine, type system, and graph data structures for Ravel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
im = { workspace = true }
serde = { workspace = true }
