# Copyright The Ravel Authors.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "ravel-gpu"
description = "Ravel GPU layer: wgpu compute pipeline and shader management."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ravel-core.workspace = true
