[package]
name = "ravel-gpu"
description = "wgpu compute pipeline and shader management for Ravel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ravel-core = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
