[package]
name = "ravel-media"
description = "FFmpeg integration, HW decode, audio engine, and OCIO for Ravel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ravel-core = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
