[package]
name = "ravel-media"
description = "FFmpeg integration, HW decode, audio engine, and OCIO for Ravel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
ffmpeg = ["dep:ffmpeg-the-third"]

[dependencies]
ravel-core = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ffmpeg-the-third = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "decode_bench"
harness = false
required-features = ["ffmpeg"]
